Update main CMakeLists building script
– Increase CMake minimum required version to 3.12.
– Remove conditional clause regarding CMake policy CMP0074 (no longer
  required with the change of minimum required version).
- Cosmetics.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,11 @@
-### --------------------------------------------------------
-### File     : CMakeLists.txt
-### Author   : Justo Martin-Albo
-### Creation : 30 March 2019
-### --------------------------------------------------------
+## ---------------------------------------------------------
+## nexus | CMakeLists.txt
+##
+## The NEXT Collaboration
+## --------------------------------------------------------
 
-cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.12 FATAL_ERROR)
 project(nexus)
-
-IF(COMMAND cmake_policy)
-  IF(${CMAKE_VERSION} VERSION_GREATER "3.8.2")
-    cmake_policy(SET CMP0074 NEW)
-  ENDIF(${CMAKE_VERSION} VERSION_GREATER "3.8.2")
-ENDIF(COMMAND cmake_policy)
-
-set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
 
 find_package(Geant4 REQUIRED ui_all vis_all)
 find_package(GSL REQUIRED)
